# bgpsim

./: CLAUDE.md  README.md  commands.py  main.py  pyproject.toml  style.tcss
assets/: inspector_demo.txt
gemma/: README.md  __init__.py  dataset.py  eval.py  functiongemma_fine_tuning.py  modal_train.py  runner.py  tools.py
gemma_new/: README.md  __init__.py  dataset.py  eval.py  format.py  modal_train.py  runner.py  tools.py  train.py
models/: bgp_config.py  bgp_message.py  bgp_session.py  bgp_state.py  link.py  packet.py  router.py  routing_table.py  world.py
models/bgp/: engine.py  route.py  session.py
models/stale/: _bgp_config.py  _bgp_message.py  _bgp_route.py  _bgp_session.py  _bgp_state.py  rib.py
ui/: __init__.py  app.py  command.py  inspector.py  legend.py  overlay.py  style.tcss  timeline.py  topology.py
